--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## Hibernate Properties
+ 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate=trace
 
+# Date
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
