--- a/pom.xml
+++ b/pom.xml
@@ -38,19 +38,19 @@
 		</dependency>
 				
 		<!-- STS security -->
-<!--		<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
--->
+
 
 		<!-- STS security-test -->
-<!--		<dependency>
+		<dependency>
 			 <groupId>org.springframework.security</groupId>
 			 <artifactId>spring-security-test</artifactId>
 			 <scope>test</scope>
 		</dependency>
--->
+
 		
 		<!-- STS Starter Web -->
 		<dependency>
